[package]
name = "axum-tower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
degeneric-macros = "0.5.0"
futures = "0.3.25"
hyper = "0.14.23"
tokio = { version = "1.23.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
trait-set = "0.3.0"
typed-builder = "0.11.0"
