[package]
name = "axum-tower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
degeneric-macros = "0.5.0"
futures = "0.3.25"
hyper = "0.14.23"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
trait-set = "0.3"
typed-builder = "0.11"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tower-http = { version = "0.3", features = ["trace", "request-id"]}
opentelemetry = { version = "*", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "*" }
tracing-opentelemetry = "*"
http = "0.2.8"
uuid = "1.2.2"
